--- a/GameEngine.Tests/GameEngine.Tests.csproj
+++ b/GameEngine.Tests/GameEngine.Tests.csproj
@@ -14,4 +14,24 @@
   <ItemGroup>
     <ProjectReference Include="..\GameEngine\GameEngine.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="SourceCode\02\demos\after\01AddingTestProject\Game.sln" />
+    <None Include="SourceCode\02\demos\after\01AddingTestProject\GameEngine.Tests\GameEngine.Tests.csproj" />
+    <None Include="SourceCode\02\demos\after\01AddingTestProject\GameEngine\GameEngine.csproj" />
+    <None Include="SourceCode\02\demos\after\02StartingTest\Game.sln" />
+    <None Include="SourceCode\02\demos\after\02StartingTest\GameEngine.Tests\GameEngine.Tests.csproj" />
+    <None Include="SourceCode\02\demos\after\02StartingTest\GameEngine\GameEngine.csproj" />
+    <None Include="SourceCode\02\demos\before\01AddingTestProject\Game.sln" />
+    <None Include="SourceCode\02\demos\before\01AddingTestProject\GameEngine.Tests\GameEngine.Tests.csproj" />
+    <None Include="SourceCode\02\demos\before\01AddingTestProject\GameEngine\GameEngine.csproj" />
+    <None Include="SourceCode\02\demos\before\02StartingTest\Game.sln" />
+    <None Include="SourceCode\02\demos\before\02StartingTest\GameEngine.Tests\GameEngine.Tests.csproj" />
+    <None Include="SourceCode\02\demos\before\02StartingTest\GameEngine\GameEngine.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SourceCode\02\demos\after\01AddingTestProject\.vs\Game\v15\" />
+    <Folder Include="SourceCode\02\demos\after\02StartingTest\.vs\Game\v15\" />
+    <Folder Include="SourceCode\02\demos\before\01AddingTestProject\.vs\Game\v15\" />
+    <Folder Include="SourceCode\02\demos\before\02StartingTest\.vs\Game\v15\" />
+  </ItemGroup>
 </Project>
